tests/rosetta/transpiler/Zig/call-a-function-12.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:4:10: error: unused function parameter
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:12:15: error: unused function parameter
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:20:54: error: pointless discard of local constant
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:21:37: note: used here
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:18:45: error: pointless discard of local constant
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:19:88: note: used here
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:17:45: error: pointless discard of local constant
/workspace/mochi/tests/rosetta/transpiler/Zig/call-a-function-12.zig:19:67: note: used here
